--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -52,6 +52,22 @@ Hill's equation (Sec.~3.3 in \bref{wilson}, Eq.~(4.33) in \bref{dolezal} or in \
 \hbox{220 m station} & 214.628 & 214.628 & 215.078 & 219.550 & 220.000 & 220.000 \cr\bln
 }
 
+\> Naming schemes
+\>> official \bref{rp naming} arm-station-unit-pot-plane-vfat-strip
+\>> OfflineSW |arm|station|pot|plane|vfat
+
+\tab[\strut\quad#\quad\hfil&\quad#\quad\hfil&\quad#\quad\hfil\cr]{rp naming schemes}{RP system naming schemes}{\bln
+& official & SW\cr\bln
+arm		& 45, 56		& 0, 1\cr
+station	& 147, 220		& 0, 2\cr
+unit	& far, near		& -\cr
+pot		& top, bot, hor	& near: 0 (top), 1 (bot), 2 (hor)\cr
+		& 				& far:  3 (hor), 4 (top), 5 (bot)\cr
+plane	& 1 to 10		& 0 to 9\cr
+vfat	& 1 to 4		& 0 to 3\cr
+strip	& 0 to 127		& -\cr\bln
+}
+
 \section{Theoretical concepts}
 
 \> def of cross-section, t, xi
