--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -251,4 +251,20 @@
       year           = "1993",
 }
 
+@Techreport{rp naming,
+	author			= "Ruggiero, G.",
+	institution		= "TOTEM",
+	title			= "Product breakdown structure and naming scheme of the Roman Pot System",
+	type			= "EDMS Document"
+	number			= "906715"
+	year			= "2008"
+}
 
+@Techreport{al collim,
+	author			= "Deile, M. et al.",
+	institution		= "TOTEM",
+	title			= "Position Settings and Limits for Insertions of the TOTEM Roman Pots in Stable Beams after the 21 September 2010",
+	type			= "EDMS Document"
+	number			= "1133082"
+	year			= "2011"
+}
