--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -17,9 +17,9 @@
 \Toctrue
 
 % to show labels
-%\ShowLabelstrue \advance\hoffset-1cm
+\ShowLabelstrue \advance\hoffset-1cm
 
-\def\FootText{(VERSION 1)}
+%\def\FootText{(VERSION 1)}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -52,11 +52,11 @@
 
 \BeginText
 
-\input introduction.tex
-\input elastic.tex
+%\input introduction.tex
+%\input elastic.tex
 \input simu_reco.tex
 \input alignment.tex
-\input sigma_tot.tex
+%\input sigma_tot.tex
 
 \appendices
 
